<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_outstanding"
        android:icon="@drawable/ic_outstanding2"
        android:title="@string/title_outstanding" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_new"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_manage"
        android:title="@string/title_manage" />
    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_more"
        android:title="@string/title_information" />

</menu>
