<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Username"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_Email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/mail_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_username3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_Nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/nickname_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Nickname"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_register_Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_register_PassworkVerify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password_confirm_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/register_password_verify"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radiogr_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radiobtn_gender_Male"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Nam"
            android:textColorHint="@color/colorPrimaryDark"
            />

        <RadioButton
            android:id="@+id/radiobtn_gender_Female"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Nữ"
            android:textColorHint="@color/colorPrimaryDark" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_RegisterSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="Xác Nhận"
        android:textColor="#FAFAFA"
        android:textSize="17sp"
        android:textStyle="bold"

        android:gravity="center"/>

    <Button
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:onClick="alreadyHaveAccount"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textAllCaps="true"/>
</LinearLayout>